# deepgram-challenge

./: .gitignore  README.md
api-server/: .env  .gitignore  Cargo.toml
api-server/migrations/2023-01-05-022409_create_file_info/: up.sql
api-server/src/: db.rs  main.rs  schema.rs
demo/: download_file.sh  file_info.sh  list_files.sh  query_by_file_type.sh  upload_file.sh
